--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ img {
 .scroll-top {
   position: fixed;
   bottom: 20px;
-  right: 20px;
+  right: 15%;
   width: 50px;
   height: 50px;
   border: none;
