--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ button:active, button:focus {
   width: 75%;
   margin: 0 auto;
   max-width: 800px;
-  padding: 0 20px;
+  padding: 0 20px 100px 20px;
   background-color: #fff;
 }
 
